swagger Group matches
